# Synapse

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
CMake/: Dependencies.cmake  DocumentationGeneration.cmake  KaidaCoreConfig.cmake.in  PreventInSourceBuilds.cmake  SanitizerConfig.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake  SynapseConfig.cmake.in  UniversalAppleBuild.cmake  toolchain-clang-cl.cmake  toolchain-msvc.cmake
CMake/Toolchains/: x64-linux-clang.cmake  x64-windows-clang-cl.cmake  x64-windows-msvc.cmake
Config/: CMakeLists.txt
Config/include/: Config.hpp
Config/source/: Config.cpp
Console/: CMakeLists.txt
Console/include/: Console.hpp
Console/source/: Console.cpp
Dependencies/: CMakeLists.txt  CMakePresets.json
Dependencies/cpptrace/: CMakeLists.txt
Dependencies/libassert/: CMakeLists.txt
Dependencies/libsodium/: CMakeLists.txt
Dependencies/spdlog/: CMakeLists.txt
Dependencies/tracy/: CMakeLists.txt
Dependencies/unordered_dense/: CMakeLists.txt
Documentation/: Doxyfile.in  header.html
ExternaDependencyInstallScripts/Windows/: clone.ps1  update.ps1
FileSystem/: CMakeLists.txt
FileSystem/include/: FileMonitor.hpp  FileUtils.hpp
FileSystem/source/: FileMonitor.cpp  FileUtils.cpp
Log/: CMakeLists.txt
Log/include/: Log.hpp
Log/source/: Log.cpp
Maths/: CMakeLists.txt
Maths/include/: Maths.hpp
Maths/source/: Maths.cpp
Memory/: CMakeLists.txt
Memory/include/: AlignmentUtility.hpp  AllocationUtility.hpp
Memory/include/Allocator/: FreeListAllocator.hpp  LinearAllocator.hpp  PoolAllocator.hpp  StackAllocator.hpp
Memory/include/Area/: HeapArea.hpp  StackArea.hpp
Memory/include/Arena/: AllocationPolicy.hpp  BoundsCheckingPolicy.hpp  MemoryArena.hpp  MemoryTaggingPolicy.hpp  MemoryTrackingPolicy.hpp  RecordingArena.hpp  STLArena.hpp  ThreadPolicy.hpp
Memory/source/: AlignmentUtility.cpp  AllocationUtility.cpp
Memory/source/Allocator/: BuddyAllocator.cpp  FreeListAllocator.cpp  LinearAllocator.cpp  PoolAllocator.cpp  StackAllocator.cpp
Memory/source/Area/: HeapArea.cpp  StackArea.cpp
Memory/source/Arena/: AllocationPolicy.cpp  MemoryArena.cpp  RecordingArena.cpp  STLArena.cpp
Network/: CMakeLists.txt
Network/include/: IOCore.hpp  IOEvent.hpp  NetAddress.hpp  Socket.hpp
Network/include/ReliableUDP/: Buffer.hpp  Connection.hpp  Errors.hpp  MessageChannelShared.hpp  ReliableOrderedMessageChannel.hpp  Serialise.hpp  UnreliableMessageChannel.hpp  UnreliableProcessMessageChannel.hpp
Network/include/Secure/: Crypto.hpp  ReplayPacketProtection.hpp
Network/source/: IOCore.cpp  NetAddress.cpp  Socket.cpp
Network/source/ReliableUDP/: Buffer.cpp  Connection.cpp  ReliableOrderedMessageChannel.cpp  Serialise.cpp  UnreliableMessageChannel.cpp  UnreliableProcessMessageChannel.cpp
Network/source/Secure/: Crypto.cpp  ReplayPacketProtection.cpp
STL/: CMakeLists.txt
STL/include/: DynamicBitSet.hpp  ObjectPool.hpp  SparseSet.hpp
STL/include/Concurrent/: AtomicQueue.hpp  AtomicQueueCommon.hpp  ConcurrentCommon.hpp
STL/source/: DynamicBitSet.cpp  ObjectPool.cpp
STL/source/Concurrent/: AtomicQueue.cpp  AtomicQueueCommon.cpp  ConcurrentCommon.cpp
Serialisation/: CMakeLists.txt
Serialisation/include/: BitReader.hpp  BitWriter.hpp  Constant.hpp  ReadStream.hpp  Serialise.hpp  SerialiseBit.hpp  WriteStream.hpp
Serialisation/source/: BitReader.cpp  BitWriter.cpp  ReadStream.cpp  Serialise.cpp  SerialiseBit.cpp  WriteStream.cpp
Tests/: CMakeLists.txt  test_BitReadWrite.cpp  test_ReadWriteStream.cpp
Tests/MemoryTest/: tests.txt
Tests/SerialisationTest/: BitReaderAndBitWriterTests.cpp  CMakeLists.txt  ReadStreamAndWriteStreamTests.cpp  SerialiseBitTests.cpp
Tests/UtilityTest/: AlignmentUtilityTest.cpp  CMakeLists.txt  StringUtilityTests.cpp
Thread/: CMakeLists.txt
Thread/include/: DeadlockProfiler.hpp  Lock.hpp  LockQueue.hpp  PeriodicTaskThread.hpp  Thread.hpp  ThreadLocals.hpp  ThreadManager.hpp
Thread/include/Job/: GlobalQueue.hpp  Job.hpp  JobQueue.hpp  JobTimer.hpp
Thread/source/: DeadlockProfiler.cpp  Lock.cpp  LockQueue.cpp  PeriodicTaskThread.cpp  ThreadLocals.cpp  ThreadManager.cpp
Thread/source/Job/: GlobalQueue.cpp  Job.cpp  JobQueue.cpp  JobTimer.cpp
Utility/: CMakeLists.txt
Utility/include/: StringUtility.hpp
Utility/source/: StringUtility.cpp
scripts/: build-dependencies.ps1  build-dependencies.sh
